--- a/01_04_Basic_Semantics_Variables.html
+++ b/01_04_Basic_Semantics_Variables.html
@@ -13104,7 +13104,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_03_Basic_Python_Syntax.ipynb#scrollTo=7hgEZJ_KsVIE">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_05_Basic_Semantics_Operators.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/01_03_Basic_Python_Syntax.html">Previous Page</a> | <a href="https://wahlerp.github.io/01_05_Basic_Semantics_Operators.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_04_Basic_Semantics_Variables.ipynb#scrollTo=iu1IieUZ47x3"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
@@ -14202,7 +14202,7 @@ underscore <code>_</code>. Names like <code>myClass</code>, <code>var_1</code> a
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_03_Basic_Python_Syntax.ipynb#scrollTo=7hgEZJ_KsVIE">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_05_Basic_Semantics_Operators.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/01_03_Basic_Python_Syntax.html">Previous Page</a> | <a href="https://wahlerp.github.io/01_05_Basic_Semantics_Operators.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_04_Basic_Semantics_Variables.ipynb#scrollTo=iu1IieUZ47x3"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
