--- a/01_11_Errors_and_Exceptions.html
+++ b/01_11_Errors_and_Exceptions.html
@@ -13104,7 +13104,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_10_Functions.ipynb#scrollTo=QdMJuXZ06lLM">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_12_Iterators.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/01_10_Functions.html">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://wahlerp.github.io/01_12_Iterators.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_11_Errors_and_Exceptions.ipynb#scrollTo=wWjhvN6v8DEc"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
@@ -14104,7 +14104,7 @@ Well, the <code>finally</code> clause really is executed <em>no matter what</em>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_10_Functions.ipynb#scrollTo=QdMJuXZ06lLM">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_12_Iterators.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/01_10_Functions.html">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://wahlerp.github.io/01_12_Iterators.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_11_Errors_and_Exceptions.ipynb#scrollTo=wWjhvN6v8DEc"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
