--- a/06_04_Line_Scatter_Plots.html
+++ b/06_04_Line_Scatter_Plots.html
@@ -13104,7 +13104,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_03_Basics_of_Plotting.ipynb#scrollTo=2u9EGeOcGs7K">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_05_Bar_Charts.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/06_03_Basics_of_Plotting.html">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://wahlerp.github.io/06_05_Bar_Charts.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_04_Line_Scatter_Plots.ipynb#scrollTo=akyQtYH_DxY8"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
@@ -14134,7 +14134,7 @@ In a first step we must get the current axes of our plot using <code>.gca()</cod
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_03_Basics_of_Plotting.ipynb#scrollTo=2u9EGeOcGs7K">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_05_Bar_Charts.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/06_03_Basics_of_Plotting.html">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://wahlerp.github.io/06_05_Bar_Charts.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_04_Line_Scatter_Plots.ipynb#scrollTo=akyQtYH_DxY8"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
