--- a/06_05_Bar_Charts.html
+++ b/06_05_Bar_Charts.html
@@ -13104,7 +13104,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_04_Line_Scatter_Plots.ipynb#scrollTo=tGcRcb47Y33e">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_06_Subplots.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/06_04_Line_Scatter_Plots.html">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://wahlerp.github.io/06_06_Subplots.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_05_Bar_Charts.ipynb#scrollTo=lTYEIDIUD-76"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
@@ -13570,7 +13570,7 @@ For example, imagine that some study results in the following bar charts.</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_04_Line_Scatter_Plots.ipynb#scrollTo=tGcRcb47Y33e">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_06_Subplots.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/06_04_Line_Scatter_Plots.html">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://wahlerp.github.io/06_06_Subplots.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_05_Bar_Charts.ipynb#scrollTo=lTYEIDIUD-76"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
