--- a/01_05_Basic_Semantics_Operators.html
+++ b/01_05_Basic_Semantics_Operators.html
@@ -13104,7 +13104,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_04_Basic_Semantics_Variables.ipynb#scrollTo=UuiLL6tDJp1M">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_06_Built_In_Data_Types_Scalars.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/01_04_Basic_Semantics_Variables.html">Previous Page</a> | <a href="https://wahlerp.github.io/01_06_Built_In_Data_Types_Scalars.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_05_Basic_Semantics_Operators.ipynb#scrollTo=rzVYzqWc5Uh0"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
@@ -14082,7 +14082,7 @@ In Python, you just type what you want to know, in a manner reminiscent of strai
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_04_Basic_Semantics_Variables.ipynb#scrollTo=UuiLL6tDJp1M">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_06_Built_In_Data_Types_Scalars.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/01_04_Basic_Semantics_Variables.html">Previous Page</a> | <a href="https://wahlerp.github.io/01_06_Built_In_Data_Types_Scalars.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_05_Basic_Semantics_Operators.ipynb#scrollTo=rzVYzqWc5Uh0"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
