--- a/01_06_Built_In_Data_Types_Scalars.html
+++ b/01_06_Built_In_Data_Types_Scalars.html
@@ -13104,7 +13104,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_05_Basic_Semantics_Operators.ipynb#scrollTo=u8TSzgqyLGBN">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_07_Built_In_Data_Types_Data_Structures.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/01_05_Basic_Semantics_Operators.html">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://wahlerp.github.io/01_07_Built_In_Data_Types_Data_Structures.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_06_Built_In_Data_Types_Scalars.ipynb#scrollTo=2taaEtrD5kFs"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
@@ -14597,7 +14597,7 @@ For example, any numeric type is False if equal to zero, and True otherwise:</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_05_Basic_Semantics_Operators.ipynb#scrollTo=u8TSzgqyLGBN">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_07_Built_In_Data_Types_Data_Structures.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/01_05_Basic_Semantics_Operators.html">Previous Page</a> | <a href="https://wahlerp.github.io/01_07_Built_In_Data_Types_Data_Structures.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_06_Built_In_Data_Types_Scalars.ipynb#scrollTo=2taaEtrD5kFs"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
