--- a/01_09_Control_flow_Statements.html
+++ b/01_09_Control_flow_Statements.html
@@ -13104,7 +13104,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_08_Built_In_Data_Types_Type_Conversion.ipynb#scrollTo=hkOKfHgWuRCj">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_10_Functions.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/01_08_Built_In_Data_Types_Type_Conversion.html">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://wahlerp.github.io/01_10_Functions.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_09_Control_flow_Statements.ipynb#scrollTo=WxnNVoTx6SD1"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
@@ -13732,7 +13732,7 @@ The <code>else</code> statement works similarly with the <code>while</code> loop
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_08_Built_In_Data_Types_Type_Conversion.ipynb#scrollTo=hkOKfHgWuRCj">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_10_Functions.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/01_08_Built_In_Data_Types_Type_Conversion.html">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://wahlerp.github.io/01_10_Functions.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/01_09_Control_flow_Statements.ipynb#scrollTo=WxnNVoTx6SD1"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
