--- a/06_01_Data_Visualization.html
+++ b/06_01_Data_Visualization.html
@@ -13104,7 +13104,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/05_07_Aggregation_and_Grouping.ipynb#scrollTo=FaceGm_frIWD">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_02_Matplotlib.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/05_07_Aggregation_and_Grouping.html">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://wahlerp.github.io/06_02_Matplotlib.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_01_Data_Visualization.ipynb#scrollTo=gwsomyJIDKeA"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
@@ -13331,7 +13331,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/05_07_Aggregation_and_Grouping.ipynb#scrollTo=FaceGm_frIWD">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_02_Matplotlib.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/05_07_Aggregation_and_Grouping.html">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://wahlerp.github.io/06_02_Matplotlib.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_01_Data_Visualization.ipynb#scrollTo=gwsomyJIDKeA"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
