--- a/07_01_Machine_Learning.html
+++ b/07_01_Machine_Learning.html
@@ -13154,7 +13154,7 @@ Semi-supervised learning methods are often useful when only incomplete labels ar
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/06_08_Plotting_with_Pandas.ipynb#scrollTo=ycp7XNp6Gjzx">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/07_02_MachineLearning_Scikit_Learnt.ipynb">Next Page</a> &gt;</p>
+<p>&lt; <a href="https://wahlerp.github.io/06_08_Plotting_with_Pandas.html">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> | <a href="https://wahlerp.github.io/07_02_MachineLearning_Scikit_Learnt.html">Next Page</a> &gt;</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/07_01_Machine_Learning.ipynb#scrollTo=-9EOmf_MExc3"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
