--- a/07_03_Model_Validation.html
+++ b/07_03_Model_Validation.html
@@ -13104,7 +13104,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/07_02_MachineLearning_Scikit_Learnt.ipynb#scrollTo=XQMsx2gmYcR9">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> |</p>
+<p>&lt; <a href="https://wahlerp.github.io/07_02_MachineLearning_Scikit_Learnt.html">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> |</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/07_03_Model_Validation.ipynb#scrollTo=QCMaTfuwFLL5"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
@@ -13636,7 +13636,7 @@ For information, refer to Scikit-Learn's <a href="http://Scikit-Learn.org/stable
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>&lt; <a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/07_02_MachineLearning_Scikit_Learnt.ipynb#scrollTo=XQMsx2gmYcR9">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> |</p>
+<p>&lt; <a href="https://wahlerp.github.io/07_02_MachineLearning_Scikit_Learnt.html">Previous Page</a> | <a href="https://wahlerp.github.io/">Home Page</a> |</p>
 <p><a href="https://colab.research.google.com/github/WahlerP/ns_cs_fundamentals/blob/main/07_03_Model_Validation.ipynb#scrollTo=QCMaTfuwFLL5"><img align="left" src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open in Colab" title="Open and Execute in Google Colaboratory"></a></p>
 
 </div>
