Added a useful resource
Hey, I have added a helpful reference link for a python function that I think will best add to your content and give your readers a more diverse understanding of the topic. I hope you will like this. Thank you.

--- a/01_16_Functional_Programming.html
+++ b/01_16_Functional_Programming.html
@@ -13626,7 +13626,7 @@ context of the for and if clauses which follow it.</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The python map() function  applies a given function to each item of an iterable (list, tuple etc.) and returns a list of the results. Often, map is used in combination with a lambda function.</p>
+<p><a href="https://www.scaler.com/topics/map-function-in-python/">The python map() function</a>  applies a given function to each item of an iterable (list, tuple etc.) and returns a list of the results. Often, map is used in combination with a lambda function.</p>
 <p>The syntax of map() is:</p>
 <p><strong><code>map(function, iterable, ...)</code></strong></p>
 
